package com.example.mohamedrayen_fadhlaouilabexam.domain.model

enum class Difficulty(val label: String, val timerSeconds: Int) {
    EASY("Easy", 20),
    MEDIUM("Medium", 15),
    HARD("Hard", 10)
}
