package com.example.mohamedrayen_fadhlaouilabexam.domain.model

enum class Category(val displayName: String) {
    ROMAN("Roman Heritage"),
    ISLAMIC("Islamic Heritage"),
    PUNIC("Punic & Pre-Roman"),
    MODERN("Modern Heritage"),
    NATURAL("Natural & Mixed Sites"),
    CITIES("Cities")
}
